Fixed text align for result

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -14,6 +14,7 @@
   color: white;
   text-align: right;
   height: 20px;
+  width: 450px;
 }
 
 .calculator .display .number {
